# tomevio-backend

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
docs/: api.md
src/: controller.rs  db.rs  main.rs  model.rs
src/auth/: guards.rs  jwt.rs  mod.rs
src/entity/: user.rs
src/routes/: author.rs  book.rs  mod.rs  search.rs  signin.rs  signup.rs
src/utils/: guards.rs  jwt.rs
