[package]
name = "tomevio-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
chrono = "0.4.41"
dotenvy = "0.15.7"
jsonwebtoken = "9.3.1"
regex = "1.11.1"
reqwest = { version = "0.12.22", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-native-tls"] }
tokio = { version = "1.46.1", features = ["full"]}
tower = "0.5.2"
uuid = "1.17.0"
